# last30days-skill-cn

./: .gitignore  AGENTS.md  CHANGELOG.md  CONCEPTS.md  CONFIGURATION.md  LICENSE  NOTICE  README.en.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
docs/: PORT_CONTRACT.md
skills/last30days-cn/: SKILL.md
skills/last30days-cn/scripts/: last30days_cn.py  store.py
skills/last30days-cn/scripts/lib/: bilibili.py  categories.py  douyin.py  env.py  html_render.py  juejin.py  normalize.py  pipeline.py  planner.py  preflight.py  providers.py  quality_nudge.py  query.py  relevance.py  render.py  resolve.py  schema.py  setup_wizard.py  signals.py  ui.py  v2ex.py  weibo.py  xiaohongshu.py  xueqiu.py  zhihu.py
tests/: conftest.py  test_bilibili.py  test_douyin.py  test_env.py  test_github.py  test_juejin.py  test_normalize_cn.py  test_pipeline_sources.py  test_planner_cn.py  test_providers_cn.py  test_relevance_cjk.py  test_render_badge.py  test_signals_cn.py  test_v2ex.py  test_weibo.py  test_xiaohongshu.py  test_xueqiu.py  test_zhihu.py
tests/fixtures/: bilibili.json  douyin.json  github.json  juejin.json  v2ex.json  weibo.json  xiaohongshu.json  xueqiu.json  zhihu.json
